set homepage background z-index to -50, fixed memesat orbit going behind background

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -27,7 +27,7 @@ body, html {
   background-position: center;
   background-repeat: no-repeat;
   position: fixed;
-  z-index: -5;
+  z-index: -50;
   overflow: auto;
 }
 
